--- a/css/design.css
+++ b/css/design.css
@@ -211,11 +211,12 @@
     position: relative;
     z-index: 0;
 }
-.what-in img {
+.what-in img, .what-in video {
     width: 100%;
-    height: 100%;
+    height: auto;
     position: absolute;
-    bottom: 0;
+    bottom: 2px;
+    right: 0;
     z-index: -1;
 }
 
