--- a/css/design.css
+++ b/css/design.css
@@ -219,6 +219,22 @@
     right: 0;
     z-index: -1;
 }
+/* .what-video {
+    position: absolute;
+    bottom: 2px;
+    right: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+.what-video .videoPlayer {
+    width: 100%;
+    height: auto;
+}
+.what-video video {
+    width: 100%;
+    height: auto;
+} */
 
 .logo-sub {
     overflow: hidden;
