--- a/css/design.css
+++ b/css/design.css
@@ -23,18 +23,24 @@
 }
 
 .header-edge {
-    background-color: transparent;
+    background-color: var(--color-white);
     padding: 16px 0;
     position: fixed;
     width: 100%;
-    z-index: 11;
-    transition: top 0.3s;
+    z-index: 100000;
+    transition: all 0.3s;
+    height: 5rem;
 }
 
 .fixed-header {
     background-color: var(--color-white);
-    z-index: 1;
+    z-index: 10000;
     box-shadow: 0px 2px 12px 0px rgba(51, 51, 51, 0.06);
+}
+.header-none{
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .top-header {
