--- a/css/design.css
+++ b/css/design.css
@@ -1060,6 +1060,82 @@
     animation-iteration-count: infinite;
 }
 
+.product__sticky .product__sticky-section .container img {
+    width: 100%;
+}
+.product__sticky .product__sticky-section .container img {
+    width: 100%;
+    opacity: 0;
+    transition: opacity .3s cubic-bezier(.25,.46,.45,.94);
+    width: calc((min(100vw,calc(100vw - 80px)) - 280px)/4 + 80px);
+}
+
+
+.product__sticky-section-blocks {
+    height: calc(100vh * 3);
+}
+.product__sticky-section {
+    left: 0;
+    margin-bottom: 50px;
+    position: relative;
+    top: 0;
+    width: 100%;
+}
+.product__sticky-section {
+    height: 100vh;
+    margin-bottom: 0;
+    pointer-events: none;
+    display: flex;
+    align-items: center;
+}
+.product__sticky.enabled .product__sticky-section {
+    position: fixed;
+}
+.product__sticky-section.active {
+    pointer-events: auto;
+}
+.product__sticky-section-content {
+    opacity: 0;
+    text-align: left;
+    transition: opacity .3s cubic-bezier(.25,.46,.45,.94);
+    width: calc((min(100vw,calc(100vw - 80px)) - 280px)/4 + 80px);
+}
+.product__sticky-section.active .product__sticky-section-content, .product__sticky-section.active:before, .product__sticky-section.active .container img {
+    opacity: 1;
+}
+.product__sticky .product__sticky-section .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product__sticky-section h3, .product__sticky-section p  {
+    opacity: 0;
+    transition: opacity 1.1s cubic-bezier(.165,.84,.44,1),visibility 1.1s cubic-bezier(.165,.84,.44,1),transform 1.1s cubic-bezier(.165,.84,.44,1);
+    visibility: hidden;
+}
+.product__sticky-section h3 {
+    transform: translateY(30px);
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+.product__sticky-section p {
+    transform: translateY(40px);
+    font-size: 16px;
+}
+.product__sticky-section.active h3, .product__sticky-section.active p {
+    opacity: 1;
+    transform: translateY(0);
+    transition-delay: .2s;
+    visibility: visible;
+}
+.product__sticky-section.active p {
+    transition-delay: .3s;
+}
+
+
+
+
 #one {
     animation-name: one;
 }
